# turreta-rust-keycloak

./: Cargo.toml  LICENSE.txt  README.md
src/: lib.rs
src/abra/: keycloak.rs  keycloak_admin_service.rs  keycloak_commons.rs  keycloak_facade.rs  keycloak_openid_service.rs  keycloakopenid.rs  mod.rs  urls.rs
src/tests/: mod.rs
src/tests/abra/: mod.rs
src/tests/keycloak-config/: kc-12.0.4-realm-export.json  kc-13.0.1-realm-export.json  kc-14.0.0-realm-export.json  kc-15.1.1-realm-export.json  kc-16.1.1-realm-export.json  realm-export-for-admin.json  realm-export-for-non-admin.json  realm1-export.json
src/tests/keycloak-config/docker/: docker-compose-keycloak-12.0.4.yml  docker-compose-keycloak-13.0.1.yml  docker-compose-keycloak-14.0.0.yml  docker-compose-keycloak-15.1.1.yml  docker-compose-keycloak-16.1.1.yml  docker-compose.yml
src/tests/keycloak-config/postman/: Turreta Rust Keycloak.postman_collection.json
