[package]
name = "turreta-rust-keycloak"
version = "0.1.0"
edition = "2021"
authors = ["turreta.com", "karl.sangabriel@gmail.com"]
description = "rust-keycloak is a Rust crate providing access to the Keycloak API."

[lib]
test = true
doctest = false

[dependencies]
reqwest = { version = "0.11.17", features = ["json"] }
serde = "1.0.160"
serde_derive = "1.0.160"
serde_json = "1.0.96"
actix-rt = "2.8.0"