[package]
name = "turreta-rust-keycloak"
version = "1.0.0"
license = "MIT"
license-file = "LICENSE.txt"
readme = "README.md"
edition = "2021"
authors = ["turreta.com", "karl.sangabriel@gmail.com"]
description = "rust-keycloak is a Rust crate that provides API to the Keycloak API."
homepage = "https://turreta.com/dev/turreta-rust-keycloak"
repository = "https://github.com/turretadotcom/turreta-rust-keycloak"
keywords = ["keycloak", "API"]


[lib]
test = true
doctest = false

[dependencies]
reqwest = { version = "0.11.17", features = ["json"] }
serde = "1.0.160"
serde_derive = "1.0.160"
serde_json = "1.0.96"
actix-rt = "2.8.0"